# Zendesk-Webhook

./: .dockerignore  .env.example  .gitignore  CLAUDE.MD  Dockerfile  GEMINI.md  PRODUCTION_DEPLOYMENT.MD  README.md  app.py  docker-compose.prod.yml  docker-compose.yml  docker-compose_local.yml  gunicorn.py  pyproject.toml  redis_cache.py  ticket_4021.json  ticket_4021_comments.json
static/: script.js  style.css
templates/: dashboard.html  index.html
